kubernetes/apps/selfhosted/openclaw/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: openclaw
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: openclaw
  egress:
    # wekan
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: wekan
            k8s:io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
